Source/WebCore: bad values from HTMLImageElement x and y attributes (CSSOM-View) https://bugs.webkit.org/show_bug.cgi?id=130308

Patch by Jeongeun Kim <je_julie.kim@samsung.com> on 2014-04-05
Reviewed by Simon Fraser.

According to CSSOM-View, interface HTMLImageElement,
The x attribute must return the x-coordinate.
If style is not updated when x() is called, it can’t return anything.
Style and layout should be done before getting value for x() and y().

Test: cssom/cssom-view-img-attributes-001.html

* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::x):
(WebCore::HTMLImageElement::y):

LayoutTests: bad values from HTMLImageElement x and y attributes (CSSOM-View)
https://bugs.webkit.org/show_bug.cgi?id=130308

Patch by Jeongeun Kim <je_julie.kim@samsung.com> on 2014-04-05
Reviewed by Simon Fraser.

According to CSSOM-View, ‘interface HTMLImageElement’,
The x attribute must return the x-coordinate.
If style is not updated when x() is called, it can’t return anything.
Style and layout should be done before getting value for x() and y().

* cssom/cssom-view-img-attributes-001-expected.txt: Added.
* cssom/cssom-view-img-attributes-001.html: Added.

Canonical link: https://commits.webkit.org/149318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166833 268f45cc-cd09-0410-ab3c-d52691b4dbfc